--- a/final project/CHARTERS.HTML
+++ b/final project/CHARTERS.HTML
@@ -54,8 +54,8 @@
             }
             .c{
                 width:20%;
-                height:400px;
-                border:1px solid black;
+                height:auto;
+                /* border:1px solid black; */
                 background-color:darkgrey;
                 float:left;
             }
@@ -68,6 +68,7 @@
             .c h4{
                 text-align:center;
                 font-size:30px;
+                width:auto;
             }
             .c p{
                 padding:5px;
@@ -75,8 +76,8 @@
             }
             .d{
                 width:20%;
-                height:400px;
-                border:1px solid black;
+                height:auto;
+                /* border:1px solid black; */
                 background-color:darkgrey;
                 float:left;
             }
@@ -88,6 +89,7 @@
             .d h4{
                 text-align:center;
                 font-size:30px;
+                width:auto;
             }
             .d p{
                 padding:5px;
@@ -95,8 +97,8 @@
             }
             .e{
                 width:20%;
-                height:400px;
-                border:1px solid black;
+                height:auto;
+                /* border:1px solid black; */
                 background-color:darkgrey;
                 float:left;
             }
@@ -108,7 +110,7 @@
             .e h4{
                 text-align:center;
                 font-size:30px;
-
+                width:auto;
             }
             .e p{
                 padding:5px;
@@ -116,8 +118,8 @@
             }
             .f{
                 width:20%;
-                height:400px;
-                border:1px solid black;
+                height:auto;
+                /* border:1px solid black; */
                 background-color:darkgrey;
                 float:left;
             }
@@ -129,7 +131,7 @@
             .f h4{
                 text-align:center;
                 font-size:30px;
-
+                width:auto;
             }
             .f p{
                 padding:5px;
@@ -137,8 +139,8 @@
             }
             .g{
                 width:19.2%;
-                height:400px;
-                border:1px solid black;
+                height:auto;
+                /* border:1px solid black; */
                 background-color:darkgrey;
                 float:right;
             }
@@ -150,11 +152,68 @@
             .g h4{
                 text-align:center;
                 font-size:30px;
-
+                width:auto;
             }
             .g p{
                 padding:5px;
                 text-align:center;
+                height:170px;
+                font-size:15px;
+            }
+            @media(max-width:400px)
+            {
+                
+                    .c img{
+                        width:100%;
+                        height:200px;
+                    }
+                    .c p{
+                        width:100%;
+                        height:auto;
+                    }
+                    .d img{
+                        width:100%;
+                        height:200px;
+                    }
+                    .d p{
+                        width:100%;
+                        height:auto;
+                    }
+                    .e p{
+                        width:100%;
+                        height:auto;
+                    }
+                    .e img{
+                        width:100%;
+                        height:200px;
+                    }
+
+                    .f p{
+                        width:100%;
+                        height:auto;
+                    }
+                    .f img{
+                        width:100%;
+                        height:200px;
+                    }
+                    .g p{
+                        height:auto;
+                    }
+                    .g img{
+                        width:100%;
+                        height:200px;
+                    }
+            }
+            @media(max-width:600px)
+            {
+                .g p{
+                    height:210px;
+                }
+            }
+            @media(max-width:800px){
+                .g p{
+                    height:200px;
+                }
             }
     </style>
 </head>
@@ -186,12 +245,12 @@
         <div class="e">
             <img src="man3.jpg">
             <h4>mr.rohit</h4>
-            <p>Lorem ipsum dolor sit amet r . Quis dolorum possimus incidunt! Repellat minus rerum, officia impedit eligendi totam expedita voluptatibus ratione.</p>
+            <p>Lorem ipsum dolor sit . Quis dolorum possimus incidunt! Repellat minus rerum, officia impedit eligendi totam expedita voluptatibus ratione.</p>
         </div>
         <div class="f">
             <img src="man4.jpg">
             <h4>mr.jonson</h4>
-            <p>Lorem ipsum dolor consectetur . Quis dolorum possimus incidunt! Repellat minus rerum, officia impedit eligendi totam expedita voluptatibus ratione.</p>
+            <p>Lorem ipsum dolor sit . Quis dolorum possimus incidunt! Repellat minus rerum, officia impedit eligendi totam expedita voluptatibus ratione.</p>
         </div>
         <div class="g">
             <img src="man5.jpg">
